added search bar and button

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
 .navbar-nav{
     margin-left: auto;
 }
+.form-row{
+    text-align: center;
+    padding: 30px;
+}
+input[type="text"], button[type="submit"] {
+    border:  3px, solid;
+    border-radius: 10px;
+}
+
