--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+/*
+changing from webview to mobile ?
+@media (max-width: 480px) {
+    body {
+        font-size: 12px;
+    }
+}
+*/
+
 .navbar-nav, .nav-link {
     margin-left: auto;
     color: blueviolet;
